<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="373dp"
        android:layout_height="248dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_button1"
        android:layout_width="171dp"
        android:layout_height="56dp"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:background="@color/white"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/sign_up_button1"
        android:layout_width="171dp"
        android:layout_height="56dp"
        android:background="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/sign_in_button1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.525" />



</androidx.constraintlayout.widget.ConstraintLayout>


